--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	**************************************************************************-->
 	<!-- 3rd party libraries (w3c) -->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="icon" href="https://www.chickenkatsu.co.uk/images/chicken_icon.png" type="image/png">
 
 	<!-- 3rd party libraries (bean) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bean/1.0.15/bean.min.js"></script>
@@ -101,6 +102,10 @@
 						href="http://psoup.math.wisc.edu/mcell/ca_rules.html">http://psoup.math.wisc.edu/mcell/ca_rules.html</a>
 			</ul>
 		</div>
+		<footer class="w3-container w3-white">
+			<a href="https://www.chickenkatsu.co.uk" target="_blank"><img
+					src="https://www.chickenkatsu.co.uk/images/chicken_icon.png" border="0"> We are Chicken Katsu </a>
+		</footer>
 	</DIV>
 </body>
 
