removed crypt from main branch, branch to be forked

--- a/index.html
+++ b/index.html
@@ -89,12 +89,7 @@
 		</header>
 		<div class="w3-container">
 			<ul>
-				<li>copy the rule into the clipboard and
-					<ul>
-						<li>for the editor <a target=editor href="editor.html">Click here</a></li>
-						<li>for the scrambler <a target=editor href="scrambler.html">Click here</a></li>
-						<li>for the encryptor <a target=editor href="crypt.html">Click here</a></li>
-					</ul>
+				<li>copy the rule into the clipboard and for the editor <a target=editor href="editor.html">Click here</a></li>
 				<li>for documentation see <a href="https://github.com/open768/CA/blob/master/%5Bdoc%5D"
 						target="_new">this document</a>
 				<li>we're on <a href="https://github.com/open768/CA">Github</a>
