--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<script src="js/widgets/components/cachart.js"></script>
 	<script src="js/widgets/components/castatus.js"></script>
 	<script src="js/widgets/components/cagridinit.js"></script>
-	<script src="js/widgets/index/camachine.js"></script>
+	<script src="js/widgets/index/caindex.js"></script>
 	<script src="js/widgets/index/cacontrolsl.js"></script>
 	<script src="js/widgets/index/cacontrolsr.js"></script>
 </head>
@@ -69,7 +69,7 @@
 		//cDebug.on(cDebugTypes.levels.extra)		//turn on debugging
 		function onJqueryLoad() {
 			cSecrets.add_googletag()
-			$("#machine").camachine({ name: "caexplore" });		//main UI is in here
+			$("#machine").caindex({ name: "caexplore" });		//main UI is in here
 		}
 		$(onJqueryLoad);
 	</script>
