--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<script src="../jsinc/ck-inc/jquery/jquery.common.js"></script>
 	<script src="../jsinc/ck-inc/common.js"></script>
 	<script src="../jsinc/ck-inc/debug.js"></script>
+	<script src="../jsinc/ck-inc/event.js"></script>
 	<script src="../jsinc/ck-inc/converter.js"></script>
 	<script src="../jsinc/ck-inc/sparse.js"></script>
 
