--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 
-	<DIV id="infopanel" class="w3-card-4 w3-sand" style="position: fixed; bottom: 0; right: 0; left:0 ">
+	<DIV id="infopanel" class="w3-card-4 w3-sand">
 		<header class="w3-container w3-yellow">
 			<h3>Information</h3>
 		</header>
