--- a/scramble.html
+++ b/scramble.html
@@ -89,7 +89,7 @@
 	<script language="javascript">
 		function onJqueryLoad() {
 			cSecrets.add_googletag()
-			$("#scrambler").cascrambler({ base_name: "cascramble" });
+			$("#scrambler").cascrambler({ name: "cascramble" });
 		}
 		$()(onJqueryLoad);
 	</script>
