--- a/scramble.html
+++ b/scramble.html
@@ -91,11 +91,11 @@
 			cSecrets.add_googletag()
 			$("#scrambler").cascrambler({ name: "cascramble" });
 		}
-		$()(onJqueryLoad);
+		$(onJqueryLoad);
 	</script>
 	<p>
 	<div class="w3-card" id="infopanel">
-		<div class="ui-widget-header">Notice</div>
+		<div class="w3-container w3-blue">Notice</div>
 		<div class="ui-widget-content">
 			<p>
 				This page is to test the scrambler function that uses a CA to read its instructions from.
@@ -104,7 +104,8 @@
 			</p>
 		</div>
 	</div>
-	<DIV ID="scrambler" class="w3-card">
+
+	<DIV ID="scrambler" class="w3-container w3-margin">
 		scrambler will go here
 	</DIV>
 </body>
