--- a/scramble.html
+++ b/scramble.html
@@ -116,13 +116,12 @@
 		</header>
 		<div class="w3-container">
 			<ul>
-				<li>copy the rule into the clipboard and for the editor <a target=editor href="editor.html">Click
-						here</a></li>
-				<li>for documentation see <a href="https://github.com/open768/CA/blob/master/%5Bdoc%5D"
+				<li>export a json from the <a target="index" href="index.html">ca explorer</a> and import the data using
+					the json
+					importer</li>
+				<li>for documentation see <a target="github" href="https://github.com/open768/CA/blob/master/%5Bdoc%5D"
 						target="_new">this document</a>
-				<li>we're on <a href="https://github.com/open768/CA">Github</a>
-				<li>for more CA rules see <a target="mcell"
-						href="http://psoup.math.wisc.edu/mcell/ca_rules.html">http://psoup.math.wisc.edu/mcell/ca_rules.html</a>
+				<li>we're on <a target="github" href="https://github.com/open768/CA">Github</a>
 			</ul>
 		</div>
 		<footer class="w3-container w3-white">
