--- a/scramble.html
+++ b/scramble.html
@@ -71,6 +71,7 @@
 
 	<!-- scrambler widgets -->
 	<script src="js/widgets/scrambler/scontrols.js"></script>
+	<script src="js/widgets/scrambler/cascanvas.js"></script>
 
 	<!-- widgets for page -->
 	<script src="js/secrets.js"></script>
